--- a/remake.yml
+++ b/remake.yml
@@ -15,4 +15,4 @@ sources:
 
 targets:
   delay_data:
-    command: read_soll_ist("raw/data/delay_data/fahrzeitensollist2015092020150926.csv")
+    command: read_soll_ist(timeslots)
